--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ loom_version = 0.11-SNAPSHOT
 # Mod Properties
 mod_version = 1.0.0
 maven_group = net.logandark
-archives_base_name = barebones
+archives_base_name = command-hider
 
 # Kotlin
 kotlin_version = 1.6.10
