--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.jvmargs = -Xmx1G
 # Check these on https://modmuss50.me/fabric.html
 minecraft_version = 1.18.2
 yarn_mappings = 1.18.2+build.2
-loader_version = 0.13.3
+loader_version = 0.13.3+local
 
 #Fabric api
 fabric_version = 0.48.0+1.18.2
@@ -15,7 +15,3 @@ loom_version = 0.11-SNAPSHOT
 mod_version = 1.0.0
 maven_group = net.logandark
 archives_base_name = command-hider
-
-# Kotlin
-kotlin_version = 1.6.10
-fabric_kotlin_version = 1.7.1+kotlin.1.6.10
