--- a/run_server/server.properties
+++ b/run_server/server.properties
@@ -1,50 +1,56 @@
 #Minecraft server properties
-spawn-protection=16
-max-tick-time=600000000
-query.port=25565
-generator-settings=
-sync-chunk-writes=true
-force-gamemode=false
-allow-nether=true
-enforce-whitelist=false
-gamemode=survival
-broadcast-console-to-ops=true
-enable-query=false
-player-idle-timeout=0
-difficulty=easy
-spawn-monsters=true
-broadcast-rcon-to-ops=true
-op-permission-level=4
-pvp=true
-entity-broadcast-range-percentage=100
-snooper-enabled=false
-level-type=default
-hardcore=false
-enable-status=true
+#Thu Mar 17 10:07:58 PDT 2022
+enable-jmx-monitoring=false
+rcon.port=25575
+level-seed=
 enable-command-block=true
-max-players=20
+gamemode=survival
+enable-query=false
+generator-settings={}
+level-name=world
+motd=A Minecraft Server
+query.port=25565
+pvp=true
+generate-structures=true
+difficulty=easy
 network-compression-threshold=256
+max-tick-time=600000000
+require-resource-pack=false
+max-players=20
+use-native-transport=true
+enable-status=true
+online-mode=false
+allow-flight=false
+broadcast-rcon-to-ops=true
+view-distance=10
+max-build-height=256
+server-ip=
+resource-pack-prompt=
+allow-nether=true
+server-port=25565
+sync-chunk-writes=true
+enable-rcon=false
+op-permission-level=4
+prevent-proxy-connections=false
+hide-online-players=false
+resource-pack=
+entity-broadcast-range-percentage=100
+simulation-distance=10
+player-idle-timeout=0
+rcon.password=
+force-gamemode=false
+rate-limit=0
+hardcore=false
+white-list=false
+broadcast-console-to-ops=true
+spawn-npcs=true
+spawn-animals=true
+snooper-enabled=false
+function-permission-level=2
+level-type=default
+text-filtering-config=
+spawn-monsters=true
+enforce-whitelist=false
+spawn-protection=16
 resource-pack-sha1=
 max-world-size=29999984
-function-permission-level=2
-rcon.port=25575
-server-port=25565
-server-ip=
-spawn-npcs=true
-allow-flight=false
-level-name=world
-view-distance=10
-resource-pack=
-spawn-animals=true
-white-list=false
-rcon.password=
-generate-structures=true
-max-build-height=256
-online-mode=false
-level-seed=
-use-native-transport=true
-prevent-proxy-connections=false
-enable-jmx-monitoring=false
-enable-rcon=false
-rate-limit=0
-motd=A Minecraft Server
