--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.jvmargs = -Xmx1G
 # Check these on https://modmuss50.me/fabric.html
 minecraft_version = 1.18.2
 yarn_mappings = 1.18.2+build.2
-loader_version = 0.13.3+local
+loader_version = 0.13.3
 
 #Fabric api
 fabric_version = 0.48.0+1.18.2
